--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Metalcutting Hub - Пазарът за металорежещи инструменти в България. Резбофрези, свредла, фрези и други.">
+  <meta name="description" content="Metalcutting Hub - Пазарът за всичко в областта на металообработката в България. Резервни части, свредла, фрези и други.">
   <meta name="keywords" content="металорежещи инструменти, резбофрези, свредла, фрези, Bazar.bg, OLX.bg, България">
   <meta name="author" content="Metalcutting Hub">
 
